--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.503.0",
     "motion": "^12.23.12",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1",
