--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.31.0",
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.503.0",
     "motion": "^12.23.12",
-    "react": "^19.0.0",
+    "react": "^19.1.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1",
+    "recharts": "^2.15.4",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
